--- a/index.html
+++ b/index.html
@@ -398,8 +398,8 @@
         // CONFIGURATION
         // ============================================================
         const CONFIG = {
-            postsFile: '/posts.json',      // Where the post manifest lives
-            postsDir: '/posts/',           // Where .md files live
+            postsFile: 'posts.json',      // Where the post manifest lives
+            postsDir: 'posts/',           // Where .md files live
             dateFormat: {                  // How dates are displayed
                 year: 'numeric',
                 month: 'long',
