--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <header class="site-header">
-            <a href="/" class="site-title">Toby Nitro</a>
-            <p class="site-tagline">Daily thoughts and experiments</p>
+        <header class="home-header">
+            <a href="/" class="site-title">Building Toby Nitro</a>
+            <p class="site-tagline">Documenting the journey from software, to hardware.</p>
         </header>
         
         <!-- Main content area - populated by JavaScript -->
