--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toby Nitro</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Building Toby Nitro - EE Blog & Educational Resources</title>
+    <meta name="title" content="Building Toby Nitro - EE Blog & Educational Resources">
+    <meta name="description" content="Documenting the journey from software to hardware. Weekly EE tutorials, circuit design insights, and embedded systems development.">
+    <meta name="keywords" content="electrical engineering, EE blog, hardware design, embedded systems, circuit design, electronics tutorials, PCB design, microcontrollers">
+    <meta name="author" content="Toby Nitro">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <link rel="canonical" href="https://tobynitro.com/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tobynitro.com/">
+    <meta property="og:site_name" content="Building Toby Nitro">
+    <meta property="og:title" content="Building Toby Nitro - EE Blog & Educational Resources">
+    <meta property="og:description" content="Documenting the journey from software to hardware. Weekly EE tutorials, circuit design insights, and embedded systems development.">
+    <meta property="og:image" content="https://tobynitro.com/og-image.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:locale" content="en_US">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://tobynitro.com/">
+    <meta name="twitter:title" content="Building Toby Nitro - EE Blog & Educational Resources">
+    <meta name="twitter:description" content="Documenting the journey from software to hardware. Weekly EE tutorials, circuit design insights, and embedded systems development.">
+    <meta name="twitter:image" content="https://tobynitro.com/og-image.jpg">
+
+    <!-- Additional SEO -->
+    <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#1a1a1a" media="(prefers-color-scheme: dark)">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⚡</text></svg>">
     <link rel="alternate" type="application/rss+xml" title="Building Toby Nitro RSS Feed" href="/feed.xml">
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400&display=swap" rel="stylesheet">
@@ -14,7 +45,9 @@
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="components/button.css">
     <link rel="stylesheet" href="components/header.css">
+    <link rel="stylesheet" href="components/tabs.css">
     <link rel="stylesheet" href="components/post-list.css">
+    <link rel="stylesheet" href="components/guide-card.css">
     <link rel="stylesheet" href="components/post.css">
     <link rel="stylesheet" href="components/navigation.css">
     <link rel="stylesheet" href="components/footer.css">
@@ -29,7 +62,7 @@
             </svg>
         </button>
         <header class="home-header">
-            <a href="/" class="site-title">Building Toby Nitro</a>
+            <a href="#" class="site-title">Building Toby Nitro</a>
             <p class="site-tagline">Documenting the journey from software, to hardware.</p>
         </header>
         
